# twitch-analytics

./: README.md  pyproject.toml
.github/workflows/: CI.yml
src/: __main__.py  dependency_injection.py  settings.py
src/api/: __init__.py  error_handler.py  errors.py
src/api/analytics/: __init__.py  models.py
src/application/: errors.py
src/application/stream/: model.py  queries.py
src/application/user/: model.py  queries.py
src/infrastructure/: __init__.py  stream.py  twitch_client.py  user.py
src/interfaces/: twitch_client.py
tests/: conftest.py  test_settings.py
tests/api/: test_analytics.py
tests/application/stream/: test_stream_queries.py
tests/application/user/: test_queries.py  test_user_queries.py
tests/infrastructure/: twitch_api_stub.py
