[project]
name = "twitch-analytics"
version = "0.1.0"
description = "Technical test API to provide twitch analytics"
authors = [
    {name = "unixio1",email = "unaxag01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
mypy = "^1.15.0"
httpx = "^0.28.1"

[tool.mypy]

plugins = [
  "pydantic.mypy"
]
